Shuffle before k-anonymization to avoid leakage